ecs-jenkins-docker/terraform/service_backend.tf
resource "aws_ecs_service" "backend" {
  name            = "backend-service"
  cluster         = aws_ecs_cluster.main.id
  task_definition = aws_ecs_task_definition.backend.arn
  desired_count   = 1
  launch_type     = "FARGATE"

network_configuration {
  subnets = aws_subnet.public[*].id
  assign_public_ip = true
  security_groups  = [aws_security_group.ecs_service.id]
}


  load_balancer {
    target_group_arn = aws_lb_target_group.backend_tg.arn
    container_name   = "backend"
    container_port   = 8080
  }

  depends_on = [aws_lb_listener.http]
}
